--- a/css/columns.css
+++ b/css/columns.css
@@ -138,13 +138,15 @@ CSS in this block is the "default" or inherited data for the rest of the CSS in 
     margin-left: auto;
     margin-right: auto;
 
-    border: 1px solid black; /*Nice border that makes it look more neat, but still a flat UI*/
+    padding-left: 5px;
 
     /*Position & Sizing*/
     text-align: left;
-    line-height: 60px;
+    line-height: 60px; /*line height = height so text is centered vertically.*/
     width: 95%;
-    height:10%;
+    height:60px;
+
+    border-radius: 5px;
 }
 
 /*CSS specific to the conversation sidebar links*/
